<resources>
    <string name="app_name">food4future Study Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">f4f Study Companion</string>
    <string name="nav_header_desc">f4f Logo</string>
    <string name="action_settings">Settings</string>
    <string name="garmin_standard_license" translatable="false">Cg4CAwQFBgcICQoLDA4PEBKAAgYkJF/hRkRXTVAdlWDx8aVtzqxUq8wSEnDCnmCuyu6yX9MfToQOQmwXoDAIThU1IhFDzyM9gv+gdHC0cP3zO3a8hjfoHnpxzm8YYti4hx9x660twYn+G18Eknmm0dchAM/JUHkmmnnxgusaCLDCtPIzcLNzIy9fPfNeVTqjG+oKUa0jUly/1tdMT9e25JQJzwyAj3BN/VHWHirw+qJVrxkvBjmHazzCmrQG98ywIedZbiYko8KOsqmOwA0CZNNGjWuX8N0nPdJyX51vWAvU1zV5VSP/T3bZFyRpxG3mA+8vUJRo1vgvLc9g4zxlM/IHp4kcWTXUsj5XYNcX9mWq2jMYgPDQ+okvKggBAgMEBQcICQ==</string>
    <string name="menu_home">Status</string>
    <string name="menu_user_management">User Management</string>
    <string name="menu_daily_questions">Diary</string>
    <string name="menu_participant_profile">Participant Profile</string>
    <string name="menu_participant_management">Participant Management</string>
    <string name="menu_login">Connect To f4f</string>
    <string name="menu_qr">Show QR Code</string>
    <string name="menu_sensor_management">Sensor Management</string>
    <string name="title_activity_login">Connect to f4f</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Please enter a password</string>
    <string name="invalid_endpoint">Please choose a valid server URL</string>
    <string name="login_failed">"Login failed"</string>
    <string name="session_status_logged_in">Signed in as: %1$s</string>
    <string name="session_status_logged_out">You are not connected to f4f.</string>
    <string name="title_activity_custom_form" translatable="false">CustomFormActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="generic_custom_form_title">Enter Data</string>
    <string name="null_element_label"><![CDATA[<none>]]></string>
    <string name="field_is_new_annotation">(new)</string>
    <string name="invalid_value_error_msg">The specified value is invalid.</string>
    <string name="qrcode_reader_default_title">QR Code Reader</string>
    <string name="title_activity_q_r_generator" translatable="false">QRGeneratorActivity</string>
    <string name="qrcode_generator_partqr_title">My Participant QR Code</string>
    <string name="qrcode_generator_default_title">Participant QR Code</string>
    <string name="prompt_endpoint">f4f Service Server (Name or URL)</string>
    <string name="prompt_user">username</string>
    <string name="prompt_qr">Sign In via QR-Code</string>
    <string name="prompt_credentials">Study credentials</string>
    <string name="login_status_authenticating">Authenticating…</string>
    <string name="login_status_downloading">Downloading study data…</string>
    <string name="save_data">OK</string>
    <string name="cleared_adt_data">Ereased all data from \'%1$s\'.</string>
    <string name="button_save_participant">Save Participant</string>
    <string name="button_save_user">Save User</string>
    <string name="title_edit_participant">Edit Participant data</string>
    <string name="title_edit_user">Edit User data</string>
    <string name="button_create_participant">Create Participant</string>
    <string name="button_create_user">Create User</string>
    <string name="title_create_participant">Create Participant</string>
    <string name="title_create_user">Create User</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_msg_discard">Discard changes?</string>
    <string name="button_create">Create</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="dialog_msg_clear_adt">Do you really want to clear all %1$s?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="day_status_loading">Loading…</string>
    <string name="day_status_future">(in future)</string>
    <string name="day_status_answered">Questions answered</string>
    <string name="day_status_open">(not yet answered)</string>
    <string name="day_status_incomplete">(incomplete)</string>
    <string name="login_authentication_error">Invalid Username or Password!</string>
    <string name="login_connection_error">You need to be online to sign in to f4f backend.</string>
    <string name="login_invalid_endpoint">This is not a valid f4f backend or the server is not accessible.</string>
    <string name="login_qr_expired">This sign up QR code has expired. Please ask for a new one at study administration.</string>
    <string name="message_session_expired">Your session has expired. Please sign up with your credentials.</string>
    <string name="message_login_error">Unexpected Error! Please contact study administration.</string>
    <string name="backend_communication_error">Cannot communicate with f4f server. Please try again another time or contact study administration.
        Thank you for your understanding.</string>
    <string name="value_not_available">(not available)</string>
    <string name="edit_user_data_title">Daily questions for: %1$s</string>
    <string name="thank_you_user_data">Thank you for your feedback!</string>
    <string name="sensor_garmin_state_description">The Garmin Fitness Tracker must be connected to the smartphone in regular periods of time to exchange the collected data.</string>
    <string name="server_synchronization_status_title">Server State</string>
    <string name="login_successful_message">Login successful.\nName: %1$s</string>
    <string name="message_home_anonymous1">Your f4f Study Companion is not yet connected to the f4f server.</string>
    <string name="message_home_anonymous2">Please log-in using your credentials or via QR Code by tapping the following button:</string>
    <string name="button_connect">Connect to f4f service</string>
    <string name="message_home_generic_1">You are signed in holding the role:</string>
    <string name="message_home_generic_2">Please browse the navigation on the left side of the screen to access your possible actions.</string>
    <string name="message_home_nurse">Welcome!\nYou are connected to the f4f service holding the role:\n<b>study assistant</b></string>
    <string name="button_home_participant_management">Go to Participant Management</string>
    <string name="login_title">Connect to f4f</string>
    <string name="quit_delay_msg">Press again to CLOSE food4future Study Companion App.</string>
    <string name="invalid_data_error_message">Received invalid data from server. Please contact study management.</string>
    <string name="user_created_message">Successfully created user with username: %1$s</string>
    <string name="participant_created_message">Successfully created participant with username: %1$s</string>
    <string name="participant_deleted_message">Successfully deleted participant with username \'%1$s\' and all associated data sets.</string>
    <string name="user_deleted_message">Successfully deleted user with username \'%1$s\' and all associated data sets.</string>
    <string name="user_delete_error">Error when trying to delete user. Please contact developer.</string>
    <string name="user_updated_message">Successfully updated user with username: %1$s</string>
    <string name="participant_updated_message">Successfully updated participant with username: %1$s</string>
    <string name="user_delete_question">Are you sure to delete user\n\'%1$s\' ?</string>
    <string name="user_delete_active_user_error">You cannot delete yourself. Please use another user profile.</string>
    <string name="error_garmin_initsdk">"Error on initializing Garmin Health SDK. Reason: '%1$s' Please contact study administration. Thank you. "</string>
    <string name="sensor_paired">This phone is paired with a wearable device</string>
    <string name="sensor_unpaired">This phone is not paired with a suitable wearable yet.</string>
    <string name="sensor_unsynched">The last sync with sensor was more than %1$d hours ago.</string>
    <string name="sensor_never_synched">No data have been received from the sensor yet.</string>
    <string name="sensor_scanning_for_devices">Scanning for devices…</string>
    <string name="sensor_connect_instruction_unpaired">Please bring your phone and the wearable sensor close together and make sure it is switched on.\n If the device does not appear in the list below after one minute, it might need to be recharged.</string>
    <string name="sensor_unpair_button">Unpair Device</string>
    <string name="sensor_title_new_sensor">Bind to new sensor</string>
    <string name="sensor_connect_instruction_paired">To connect a new sensor device, you first need to unpair the wearable device, which is currently paired.\n\nPress the UNPAIR DEVICE button to unpair the following device:</string>
    <string name="sensor_synchronization_failed">Synchronization with Sensor Device failed! Reason: %1$s</string>
    <string name="sensor_synchronization_failed_reason_lost_connection">Lost connection to device.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="sensor_pairing_failed">Pairing error: \'%1$s\' Please contact study administration.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sensor_pair_enter_auth_code">Please enter the number you see on the wearable\'s display.</string>
    <string name="sensor_pair_reset_requested_title">Device reset requested</string>
    <string name="questions_today_title">Today\'s Questions</string>
    <string name="questions_today_message">Today\'s questions have not been answered yet.</string>
    <string name="questions_today_button">Answer Now</string>
    <string name="questions_log_title">Diary</string>
    <string name="questions_log_message">Browse or edit the daily questions you already answered or add information for the past days afterwards.</string>
    <string name="setting_backend_server">f4f Backend Server</string>
    <string name="setting_backend_server_custom_url">Custom Backend Server URL</string>
    <string name="setting_backend_server_url">Backend Server URL</string>
    <string name="setting_disconnect">Disconnect from f4f backend (Logout)</string>
    <string name="setting_title_sensor">Wearable Sensor</string>
    <string name="login_qr_button">Scan\nQR</string>
    <string name="menu_dev">Dev Tools</string>
    <string name="setting_sensor_firmware_udpate">Check for Sensor Firmware Update…</string>
    <string name="foodlist_helpertext">The following list shows an overview of the study-relevant foods you consumed today.\nPlease add new entries by Pressing the green button.\nYou can remove existing entries by pressing the red button.</string>
    <string name="foodlist_title">Today\'s foods</string>
    <string name="action_license_info">License information</string>
    <string name="action_export_data">Export Data</string>
    <string name="action_release_notes">Release Notes</string>
    <string name="questions_daylog_not_available">There is no valid study period specified for the current participant profile.</string>
    <string name="foodlist_check_no_consumption">I did not consume <b>any</b> of the selectable food products today.</string>
    <string name="app_info_version">App Version</string>
    <string name="questions_log_loading">Loading Question Log…\nPlease wait</string>
</resources>