<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license_info"
        android:orderInCategory="110"
        android:title="@string/action_license_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_release_notes"
        android:orderInCategory="110"
        android:title="@string/action_release_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_data"
        android:orderInCategory="110"
        android:title="@string/action_export_data"
        app:showAsAction="never" />

</menu>