<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/prompt_endpoint"
    android:labelFor="@+id/endpoint"
    app:layout_constraintBottom_toTopOf="@id/endpoint"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="24dp"
    >
</TextView>

    <AutoCompleteTextView
        android:id="@+id/endpoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:singleLine="true"
        android:completionThreshold="0"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:selectAllOnFocus="true"
        android:inputType="textAutoCorrect"
        android:hint="@string/prompt_endpoint"
        tools:listitem="@android:layout/simple_list_item_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </AutoCompleteTextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_credentials"
        android:labelFor="@+id/endpoint"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        >
    </TextView>


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_user"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endpoint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/tvInvalidCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invalid Username or Password!"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/login"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/login_qr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_qr"
        android:textStyle="bold"
        android:labelFor="@+id/btnQR"
        app:layout_constraintBottom_toTopOf="@id/btnQR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        >
    </TextView>

    <ImageButton
        android:tooltipText="@string/login_qr_button"
        android:id="@+id/btnQR"
        android:enabled="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_qr_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />


    <ProgressBar
        android:id="@+id/loading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/tvInvalidCredentials"/>


    <TextView
        android:id="@+id/login_status_label"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/login_status_authenticating"
        android:labelFor="@+id/btnQR"
        app:layout_constraintTop_toBottomOf="@id/loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        >
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>