<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/valFoodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textStyle="bold"
        android:text="@string/foodlist_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/valFoodHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"

        android:text="@string/foodlist_helpertext"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:id="@+id/valFoodlistContainer"
        android:orientation="vertical">

        <include
            layout="@layout/custom_field_foodlist_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <include
            layout="@layout/custom_field_foodlist_entry_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/valFoodCheckNoConsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/foodlist_check_no_consumption" />


</LinearLayout>