<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.QuestionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/viewTodaysQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_today_title"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_today_message" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonTodayQuestions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questions_today_button" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_log_title"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_log_message" />


                <ScrollView
                    android:id="@+id/daylog_scrollview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TableLayout
                        android:id="@+id/daylog_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:stretchColumns="1">

                        <TableRow>

                            <include
                                layout="@layout/view_questionlog_tablerow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>

                        <TableRow>

                            <include
                                layout="@layout/view_questionlog_tablerow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>


                    </TableLayout>
                </ScrollView>

                <TextView
                    android:id="@+id/text_daylog_not_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:text="@string/questions_daylog_not_available"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    >

                </TextView>


                <LinearLayout
                    android:id="@+id/daylog_loading_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/questions_log_loading"
                        android:textAlignment="center"
                        android:textStyle="bold">

                    </TextView>

                    <ProgressBar
                        android:id="@+id/question_log_progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>